# happimo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  dev.yaml  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
accounts/migrations/: 0001_initial.py
compose/dev/: Dockerfile
happimo/: asgi.py  settings.py  urls.py  wsgi.py
moods/: admin.py  apps.py  form_fields.py  forms.py  models.py  signals.py  tests.py  urls.py
moods/management/commands/: add_activities.py  add_entries.py  add_moods.py  base_delete_command.py  delete_activities.py  delete_entries.py  delete_moods.py  seed.py
moods/migrations/: 0001_initial.py  0002_alter_activity_options_alter_entry_options_and_more.py  0003_alter_mood_color.py  0004_alter_mood_options_mood_relative_order.py
moods/tests/: test_activities.py  test_entries.py  test_moods.py  tests_activities.py  tests_moods.py
moods/views/: activity_views.py  entry_views.py  mood_views.py
pages/: urls.py  views.py
static/css/: style.css
templates/: base.html  base_form.html
templates/account/: login.html
templates/includes/: app_header.html  header.html  sidebar.html
templates/moods/: activity_create_form.html  activity_delete_form.html  activity_list.html  activity_update_form.html  entry_create_form.html  entry_delete_form.html  entry_list.html  entry_update_form.html  hx_entry_list.html  hx_mood_list.html  mood_create_form.html  mood_delete_form.html  mood_list.html  mood_update_form.html
templates/pages/: home.html
utils/: dummy.py  test.py  test_mixins.py
