[tool.poetry]
name = "happimo"
version = "0.0.1"
description = "Self-hosted and Open-Source mood tracking and journal application."
authors = ["dnlzrgz <24715931+dnlzrgz@users.noreply.github.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
environs = "^11.0.0"
django-allauth = "^0.62.1"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
django-sqids = "^0.2.0"
pymemcache = "^4.0.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
faker = "^25.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
commitizen = "^3.25.0"
djhtml = "^3.0.6"
ruff = "^0.4.3"
django-browser-reload = "^1.12.1"
django-silk = "^5.1.0"
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
